# evals

./: .gitignore  README.md  justfile  pyproject.toml
docs/: scores.smd  test.smd
src/evals/: __init__.py  aider.py  litellm.py  lmsys.py  model_match.py  modelmap.py  models.py  orm.py  prompts.py  routing.py  scoring.py  settings.py  thefastestai.py
src/evals/benchmarks/: __init__.py  _benchmark.py  aider.py  litellm.py  lmsys.py  thefastestai.py
tables/: match_litellm.csv  match_lmsys.csv  match_thefastestai.csv  model-id-mapping.json  model.csv  prompt.csv
tests/: conftest.py  test_orm.py
